crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-cli-override/snapshots/query - --cache enables script caching.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
info:
  args:
    - run
    - "--cache"
    - test
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-cli-override
---
[
  {
    "key": [
      "<workspace>/",
      "test"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/cache-cli-override",
        "task_name": "test",
        "package_path": "<workspace>/"
      },
      "items": [
        {
          "execution_item_display": {
            "task_display": {
              "package_name": "@test/cache-cli-override",
              "task_name": "test",
              "package_path": "<workspace>/"
            },
            "command": "vtt print-file package.json",
            "and_item_index": null,
            "cwd": "<workspace>/"
          },
          "kind": {
            "Leaf": {
              "Spawn": {
                "cache_metadata": {
                  "spawn_fingerprint": {
                    "cwd": "",
                    "program_fingerprint": {
                      "OutsideWorkspace": {
                        "program_name": "vtt"
                      }
                    },
                    "args": [
                      "print-file",
                      "package.json"
                    ],
                    "env_fingerprints": {
                      "fingerprinted_envs": {},
                      "untracked_env_config": [
                        "<default untracked envs>"
                      ]
                    }
                  },
                  "execution_cache_key": {
                    "UserTask": {
                      "task_name": "test",
                      "and_item_index": 0,
                      "extra_args": [],
                      "package_path": ""
                    }
                  },
                  "input_config": {
                    "includes_auto": true,
                    "positive_globs": [],
                    "negative_globs": []
                  }
                },
                "spawn_command": {
                  "program_path": "<tools>/vtt",
                  "args": [
                    "print-file",
                    "package.json"
                  ],
                  "all_envs": {
                    "NO_COLOR": "1",
                    "PATH": "<workspace>/node_modules/.bin:<tools>:<tools>"
                  },
                  "cwd": "<workspace>/"
                }
              }
            }
          }
        }
      ]
    },
    "neighbors": []
  }
]
