crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-cli-override/snapshots/task graph.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: task_graph_json
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-cli-override
---
[
  {
    "key": [
      "<workspace>/",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/cache-cli-override",
        "task_name": "build",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "print-file package.json",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            },
            "output_globs": []
          }
        }
      },
      "source": "TaskConfig"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "check"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/cache-cli-override",
        "task_name": "check",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "print-file package.json",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            },
            "output_globs": []
          }
        }
      },
      "source": "TaskConfig"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "deploy"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/cache-cli-override",
        "task_name": "deploy",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "print-file vite-task.json",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": null
        }
      },
      "source": "TaskConfig"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "lint"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/cache-cli-override",
        "task_name": "lint",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "print-file vite-task.json",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            },
            "output_globs": []
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "test"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/cache-cli-override",
        "task_name": "test",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "print-file package.json",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            },
            "output_globs": []
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  }
]
